--- a/html/menu.html
+++ b/html/menu.html
@@ -77,6 +77,28 @@
 
                 <div class="menuOptionCard">
                     <div class="menuOptionCardImage">
+                        <img src="../assets/menu/pizzas/camarao.jpg" alt="">
+                    </div>
+
+                    <div class="menuOptionCardInfo">
+                        <h4>Camarão com Catupiry</h4>
+                        <p>
+                            Pizza com camarão de qualidade e um delicioso queijo cremoso
+                        </p>
+                        <label for="sizes">Selecione o tamanho</label>
+                        <select name="sizes" id="">
+                            <option value="15">Brotinho - 15cm</option>
+                            <option value="20">Pequena - 20cm</option>
+                            <option value="25">Média - 25cm</option>
+                            <option value="30">Grande - 30cm</option>
+                            <option value="40">Família - 40cm</option>
+                        </select>
+                        <button class="redBtn">Adicionar - R$00,00</button>
+                    </div>
+                </div>
+
+                <div class="menuOptionCard">
+                    <div class="menuOptionCardImage">
                         <img src="../assets/menu/pizzas/muzzarela.jpeg" alt="">
                     </div>
 
@@ -129,6 +151,50 @@
                         <h4>Presunto</h4>
                         <p>
                             Deliciosa pizza coberta com tiras de presunto e queijo mussarela
+                        </p>
+                        <label for="sizes">Selecione o tamanho</label>
+                        <select name="sizes" id="">
+                            <option value="15">Brotinho - 15cm</option>
+                            <option value="20">Pequena - 20cm</option>
+                            <option value="25">Média - 25cm</option>
+                            <option value="30">Grande - 30cm</option>
+                            <option value="40">Família - 40cm</option>
+                        </select>
+                        <button class="redBtn">Adicionar - R$00,00</button>
+                    </div>
+                </div>
+
+                <div class="menuOptionCard">
+                    <div class="menuOptionCardImage">
+                        <img src="../assets/menu/pizzas/bacon.jpg" alt="">
+                    </div>
+
+                    <div class="menuOptionCardInfo">
+                        <h4>Bacon</h4>
+                        <p>
+                            Deliciosa pizza com pedaços de bacon
+                        </p>
+                        <label for="sizes">Selecione o tamanho</label>
+                        <select name="sizes" id="">
+                            <option value="15">Brotinho - 15cm</option>
+                            <option value="20">Pequena - 20cm</option>
+                            <option value="25">Média - 25cm</option>
+                            <option value="30">Grande - 30cm</option>
+                            <option value="40">Família - 40cm</option>
+                        </select>
+                        <button class="redBtn">Adicionar - R$00,00</button>
+                    </div>
+                </div>
+
+                <div class="menuOptionCard">
+                    <div class="menuOptionCardImage">
+                        <img src="../assets/menu/pizzas/4queijos.png" alt="">
+                    </div>
+
+                    <div class="menuOptionCardInfo">
+                        <h4>4 Queijos</h4>
+                        <p>
+                            Pizza com cheddar, mussarela, provolone e requeijão
                         </p>
                         <label for="sizes">Selecione o tamanho</label>
                         <select name="sizes" id="">
@@ -200,6 +266,66 @@
                         <h4>Pudim</h4>
                         <p>
                             Se você gosta de pudim, precisa experimentar o nosso maravilhoso pudim de leite especial
+                        </p>
+
+                        <button class="redBtn">Adicionar - R$00,00</button>
+                    </div>
+                </div>
+
+                <div class="menuOptionCard">
+                    <div class="menuOptionCardImage">
+                        <img src="../assets/menu/sobremesas/mousseLimão.png" alt="">
+                    </div>
+
+                    <div class="menuOptionCardInfo">
+                        <h4>Mousse de Limão</h4>
+                        <p>
+                            Sobremesa francesa feita com limão, creme de leite, leite condensado e gelatina incolor
+                        </p>
+
+                        <button class="redBtn">Adicionar - R$00,00</button>
+                    </div>
+                </div>
+
+                <div class="menuOptionCard">
+                    <div class="menuOptionCardImage">
+                        <img src="../assets/menu/sobremesas/tortaOreo.jpeg" alt="">
+                    </div>
+
+                    <div class="menuOptionCardInfo">
+                        <h4>Torta de Oreo</h4>
+                        <p>
+                            Uma fatia da nossa torta de Oreo
+                        </p>
+
+                        <button class="redBtn">Adicionar - R$00,00</button>
+                    </div>
+                </div>
+
+                <div class="menuOptionCard">
+                    <div class="menuOptionCardImage">
+                        <img src="../assets/menu/sobremesas/tortaChocolate.jpeg" alt="">
+                    </div>
+
+                    <div class="menuOptionCardInfo">
+                        <h4>Torta de Chocolate</h4>
+                        <p>
+                            Torta feita com chocolate e recheado com ganache
+                        </p>
+
+                        <button class="redBtn">Adicionar - R$00,00</button>
+                    </div>
+                </div>
+
+                <div class="menuOptionCard">
+                    <div class="menuOptionCardImage">
+                        <img src="../assets/menu/sobremesas/pave.jpeg" alt="">
+                    </div>
+
+                    <div class="menuOptionCardInfo">
+                        <h4>Pavê</h4>
+                        <p>
+                            Torta gelada que tem como base biscoitos do tipo champanhe
                         </p>
 
                         <button class="redBtn">Adicionar - R$00,00</button>
